--- a/AiForms.Maui.Dialogs/AiForms.Maui.Dialogs.csproj
+++ b/AiForms.Maui.Dialogs/AiForms.Maui.Dialogs.csproj
@@ -62,6 +62,7 @@
 	<ItemGroup>
 	  <None Remove="Extensions\" />
 	  <None Remove="Platforms\Android\Extensions\" />
+	  <None Remove="Platforms\Android\Resources\layout\loading_dialog_layout.axml" />
 	</ItemGroup>
 	<ItemGroup>
 	  <Folder Include="Extensions\" />
@@ -69,5 +70,8 @@
 	</ItemGroup>
 	<ItemGroup>
 	  <None Include="Loading\LoadingBase.iOS.cs" />
+	</ItemGroup>
+	<ItemGroup>
+	  <AndroidResource Include="Platforms\Android\Resources\layout\loading_dialog_layout.axml" />
 	</ItemGroup>
 </Project>
