--- a/Sample/Sample.csproj
+++ b/Sample/Sample.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>net6.0-android;net6.0-ios;net6.0-maccatalyst</TargetFrameworks>		
+		<TargetFrameworks>net7.0-android;net7.0-ios;net7.0-maccatalyst</TargetFrameworks>		
 		<OutputType>Exe</OutputType>
 		<RootNamespace>Sample</RootNamespace>
 		<UseMaui>true</UseMaui>
@@ -12,7 +12,7 @@
 		<ApplicationTitle>Sample</ApplicationTitle>
 
 		<!-- App Identifier -->
-		<ApplicationId>com.companyname.sample</ApplicationId>
+		<ApplicationId>jp.kamusoft.sample</ApplicationId>
 		<ApplicationIdGuid>38e32df2-c8a7-4d9d-83fb-60ebae4fce11</ApplicationIdGuid>
 
 		<!-- Versions -->
@@ -24,15 +24,11 @@
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'android'">21.0</SupportedOSPlatformVersion>
 	</PropertyGroup>
 
-	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net6.0-ios|AnyCPU'">
-	  <EnableCodeSigning>False</EnableCodeSigning>
-	  <CodesignKey>iPhone Developer</CodesignKey>
-	  <MtouchDebug>true</MtouchDebug>
-	  <!--<CodesignProvision>自動</CodesignProvision>-->
+	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net7.0-ios|AnyCPU'">
 	  <CreatePackage>false</CreatePackage>
 	</PropertyGroup>
-	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net6.0-ios|AnyCPU'">
-	  <EnableCodeSigning>false</EnableCodeSigning>
+	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net7.0-android|AnyCPU'">
+	  <EmbedAssembliesIntoApk>true</EmbedAssembliesIntoApk>
 	</PropertyGroup>
 	<ItemGroup>
 		<!-- App Icon -->
@@ -57,8 +53,8 @@
 	  <None Remove="ViewModels\" />
 	</ItemGroup>
 	<ItemGroup>
-	  <PackageReference Include="AiForms.Maui.SettingsView" Version="0.1.12-pre" />
-	  <PackageReference Include="Prism.DryIoc.Maui" Version="8.1.273-pre" />
+	  <PackageReference Include="AiForms.Maui.SettingsView" Version="0.1.14-pre" />
+	  <PackageReference Include="Prism.DryIoc.Maui" Version="9.0.124-pre" />
 	  <PackageReference Include="ReactiveProperty" Version="8.1.2" />
 	</ItemGroup>
 	<ItemGroup>
