--- a/AiForms.Maui.Dialogs/AiForms.Maui.Dialogs.csproj
+++ b/AiForms.Maui.Dialogs/AiForms.Maui.Dialogs.csproj
@@ -63,6 +63,10 @@
 	  <None Remove="Extensions\" />
 	  <None Remove="Platforms\Android\Extensions\" />
 	  <None Remove="Platforms\Android\Resources\layout\loading_dialog_layout.axml" />
+	  <None Remove="Platforms\Android\Resources\anim\extra_dialog_exit.xml" />
+	  <None Remove="Platforms\Android\Resources\anim\extra_dialog_enter.xml" />
+	  <None Remove="Platforms\Android\Resources\values\Strings.xml" />
+	  <None Remove="Platforms\Android\Resources\values\styles.xml" />
 	</ItemGroup>
 	<ItemGroup>
 	  <Folder Include="Extensions\" />
@@ -73,5 +77,9 @@
 	</ItemGroup>
 	<ItemGroup>
 	  <AndroidResource Include="Platforms\Android\Resources\layout\loading_dialog_layout.axml" />
+	  <AndroidResource Include="Platforms\Android\Resources\anim\extra_dialog_exit.xml" />
+	  <AndroidResource Include="Platforms\Android\Resources\anim\extra_dialog_enter.xml" />
+	  <AndroidResource Include="Platforms\Android\Resources\values\Strings.xml" />
+	  <AndroidResource Include="Platforms\Android\Resources\values\styles.xml" />
 	</ItemGroup>
 </Project>
