--- a/AzurePipelines.nuspec
+++ b/AzurePipelines.nuspec
@@ -14,7 +14,9 @@
         </description>
         <summary></summary>
         <releaseNotes>
-Add DialogMargin Property
+[Dialog]
+- ShowAsync viewmodel boot.
+- Add ShowResultAsync
         </releaseNotes>
         <tags>MAUI dialog toast loading progress popup xaml netstandard ios android</tags>
         <language>en-US</language>
